wr-383: * fix genres stats overlaping

--- a/frontend/src/pages/profile/components/user-articles-genres-stats/styles.module.scss
+++ b/frontend/src/pages/profile/components/user-articles-genres-stats/styles.module.scss
@@ -16,6 +16,10 @@
   align-items: center;
 }
 
+.responsiveContainer {
+  min-height: 330px;
+}
+
 .form {
   width: 100%;
 }
