--- a/frontend/src/pages/profile/styles.module.scss
+++ b/frontend/src/pages/profile/styles.module.scss
@@ -34,10 +34,6 @@
     max-width: 600px;
   }
 
-  .stats {
-    height: 450px;
-  }
-
   .activity {
     padding: 10px;
     padding-right: 30px;
